--- a/src/site/_includes/components/calloutScript.njk
+++ b/src/site/_includes/components/calloutScript.njk
@@ -1,4 +1,4 @@
-<script async src="https://cdn.jsdelivr.net/npm/lucide@0.115.0/dist/umd/lucide.min.js"></script>
+<script async src="https://unpkg.com/lucide@latest"></script>
 <script>
     // Create callout icons
     window.addEventListener("load", () => {
@@ -14,7 +14,7 @@
                     const calloutIcon = document.createElement("i");
 
                     calloutIconContainer.appendChild(calloutIcon);
-                    calloutIcon.setAttribute("icon-name", iconName);
+                    calloutIcon.setAttribute("data-lucide", iconName);
                     calloutIconContainer.setAttribute("class", "callout-icon");
                     calloutTitle.insertBefore(calloutIconContainer, calloutTitle.firstChild);
                 }
