--- a/src/site/styles/user/fonts.css
+++ b/src/site/styles/user/fonts.css
@@ -9,14 +9,25 @@
     /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-/* ibm-plex-sans-kr-700 - korean_latin_latin-ext */
+/* ibm-plex-sans-kr-500 - korean_latin_latin-ext */
 @font-face {
     font-display: swap;
     /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'IBM Plex Sans KR';
     font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/ibm-plex-sans-kr-v10-korean_latin_latin-ext-700.woff2') format('woff2');
+    font-weight: 500;
+    src: url('../fonts/ibm-plex-sans-kr-v10-korean_latin_latin-ext-500.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* ibm-plex-sans-kr-600 - korean_latin_latin-ext */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'IBM Plex Sans KR';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/ibm-plex-sans-kr-v10-korean_latin_latin-ext-600.woff2') format('woff2');
     /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
