--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,4 +10,7 @@ body {
     //  h1 {
     //   color: black;
     //  }
+    .callout:not([data-callout-metadata*=revert]):not(.is-collapsible) > .callout-title .callout-title-inner {
+        font-weight: 600;
+    }
 }
