remove redundant css settings in page header njk

--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -22,10 +22,12 @@
     <link href="/styles/style.css" rel="stylesheet">
 {%endif%}
 
-<link href="/styles/custom-style.css" rel="stylesheet">
-{%- for style in dynamics.styles -%}
+{# loads one singly combined custom.scss -> css file instead #}
+{# separate scss files' name should start with _ #}
+<link href="/styles/user/custom.css" rel="stylesheet">
+{# {%- for style in dynamics.styles -%}
 <link href="{{style}}" rel="stylesheet">
-{%- endfor -%}
+{%- endfor -%} #}
 
 {% favicons './src/site/favicon.svg', appleIconBgColor='#123' %}
 
