--- a/src/site/styles/user/custom.scss
+++ b/src/site/styles/user/custom.scss
@@ -1,4 +1,4 @@
 @use "./_fonts.scss";
 @use "./_prism-nord.min.scss";
 @use "./_override-callout-weight.scss";
-@use "./center-image";
+@use "./center-image.scss";
