--- a/src/site/styles/user/_center-image.scss
+++ b/src/site/styles/user/_center-image.scss
@@ -2,5 +2,5 @@ main picture>img {
     margin-inline: auto;
     display: block;
     filter: drop-shadow(2px 4px 4px black);
-    border-radius: 3%;
+    border-radius: 5px;
 }
